all-timenewbestscore, congratulations
page Responsive Design
Design and Responsive

--- a/all-timenewbestscore.html
+++ b/all-timenewbestscore.html
@@ -61,7 +61,7 @@
                         <p class="nabar">24,423</p>
                     </div>
                 </div>
-                <div class="box_t_w_m_at">
+                <div class="box_t_w_m_ati">
                     <p class="text_t_w_m_at">All Time</p>
                     <div class="score_nabar">
                         <p class="nabar_box">
