--- a/index.html
+++ b/index.html
@@ -40,10 +40,10 @@
         <div class="box-welcome">
             <div class="welcome_box">
                 <p class="hedging">Welcome</p>
-                <p class="second_text">Please read and accept our <samp>Terms and Privacy Policy</samp> which set out the terms 
+                <p class="second_text">Please read and accept our <span>Terms and Privacy Policy</span> which set out the terms 
                     of use of our app and explain how we collect, use and process your information, 
                     the privacy rights available to you and instructions on how you can exercise such 
-                    privacy rights, otherwise <samp>see the options</samp> available to you
+                    privacy rights, otherwise <span>see the options</span> available to you
                 </p>
                 <div class="btn-three bcc_button">
                     <button  id="accept"><a href="#">Accept</a></button>
