--- a/game-main.html
+++ b/game-main.html
@@ -258,134 +258,11 @@
                 </div>
             </div>
             <!-- Background  -->
-            <div class="card-img " id="bgcard">
-                <div class="card-box">
-                    <img src="./img/classic-cloth.png" alt="change">
-                    <p class="card-name">Classic Cloth</p>
-                </div>
-                <div class="card-box">
-                    <img src="./img/medieval.png" alt="change">
-                    <p class="card-name">Classic Cloth</p>
-                </div>
-                <div class="card-box">
-                    <img src="./img/paradise_king.png" alt="change">
-                    <p class="card-name">Classic Cloth</p>
-                </div>
-                <div class="card-box">
-                    <img src="./img/pirates.png" alt="change">
-                    <p class="card-name">Classic Cloth</p>
-                </div>
-                <div class="card-box">
-                    <img src="./img/beach.png" alt="change">
-                    <p class="card-name">Classic Cloth</p>
-                </div>
-                <div class="card-box">
-                    <img src="./img/bloom.png" alt="change">
-                    <p class="card-name">Classic Cloth</p>
-                </div>
-                <div class="card-box">
-                    <img src="./img/forest.png" alt="change">
-                    <p class="card-name">Classic Cloth</p>
-                </div>
-                <div class="card-box">
-                    <img src="./img/meadow.png" alt="change">
-                    <p class="card-name">Classic Cloth</p>
-                </div>
-                <div class="card-box">
-                    <img src="./img/aquarium.png" alt="change">
-                    <p class="card-name">Classic Cloth</p>
-                </div>
-                <div class="card-box">
-                    <img src="./img/forest.png" alt="change">
-                    <p class="card-name">Classic Cloth</p>
-                </div>
-                <div class="card-box">
-                    <img src="./img/meadow.png" alt="change">
-                    <p class="card-name">Classic Cloth</p>
-                </div>
-                <div class="card-box">
-                    <img src="./img/aquarium.png" alt="change">
-                    <p class="card-name">Classic Cloth</p>
-                </div>
-                <div class="card-box">
-                    <img src="./img/forest.png" alt="change">
-                    <p class="card-name">Classic Cloth</p>
-                </div>
-                <div class="card-box">
-                    <img src="./img/meadow.png" alt="change">
-                    <p class="card-name">Classic Cloth</p>
-                </div>
-                <div class="card-box">
-                    <img src="./img/aquarium.png" alt="change">
-                    <p class="card-name">Classic Cloth</p>
-                </div>
-            </div>
-                <!-- popup Card Face -->
-            <div class="card-img cardface_box " id="cardface">
-                <div class="card-box card_face">
-                    <div class="image_face_box">
-                        <img src="img/card_k9.png" alt="">
-                    </div>
-                </div>
-                <div class="card-box card_face">
-                    <div class="image_face_box">
-                        <img src="img/k9_bleck.png" alt="">
-                    </div>
-                </div>
-                <div class="card-box card_face">
-                    <div class="image_face_box">
-                        <img src="img/k9_blue.png" alt="">
-                    </div>
-                </div>
-                <div class="card-box card_face">
-                    <div class="image_face_box">
-                        <img src="img/k9_bleck.bg.png" alt="">
-                    </div>                    
-                </div>
-                <div class="card-box card_face">
-                    <div class="image_face_box">
-                        <img src="img/k9_red.bleck.png" alt="">
-                    </div>                    
-                </div>
-                <div class="card-box card_face">
-                    <div class="image_face_box">
-                        <img src="img/k9_red.png" alt="">
-                    </div>
-                </div>              
-            </div>
+            <div class="card-img " id="bgcard"></div>
+            <!-- popup Card Face -->
+            <div class="card-img cardface_box " id="cardface"></div>
                 <!-- Card Back -->
-            <div class="card-img cardback " id="cardback">
-                <div class="card-box card_face">
-                    <div class="image_face_box">
-                        <img src="img/classic-cloth_bg.png" alt="">
-                    </div>
-                </div>
-                <div class="card-box card_face">
-                    <div class="image_face_box">
-                        <img src="img/medieval_bg.png" alt="">
-                    </div>
-                </div>
-                <div class="card-box card_face">
-                    <div class="image_face_box">
-                        <img src="img/paradise_king_bg.png" alt="">
-                    </div>
-                </div>
-                <div class="card-box card_face">
-                    <div class="image_face_box">
-                        <img src="img/forest_bg.png" alt="">
-                    </div>                    
-                </div>
-                <div class="card-box card_face">
-                    <div class="image_face_box">
-                        <img src="img/meadow_bg.png" alt="">
-                    </div>                    
-                </div>
-                <div class="card-box card_face">
-                    <div class="image_face_box">
-                        <img src="img/pirates_bg.png" alt="">
-                    </div>
-                </div>
-            </div>
+            <div class="card-img cardback " id="cardback"></div>
         </div>
     </div>
     <!-- Settings popup -->
