--- a/game-main.html
+++ b/game-main.html
@@ -195,13 +195,13 @@
 
             <!--? Start: setting & themes  -->
             <div id="combo-right">
-                <div id="box-main" class="setting">
+                <div id="box-main" class="awards">
                     <div class="icons-img">
                         <img src="./img/GearSix.svg" alt="img">
                     </div>
                     <p id="text-same">Settings</p>
                 </div>
-                <div id="box-main" class="showPopup">
+                <div id="box-main" class="showPopu">
                     <div class="icons-img">
                         <img src="./img/themes.svg" alt="img">
                     </div>
@@ -266,7 +266,7 @@
         </div>
     </div>
     <!-- Settings popup -->
-    <div class="center_box setting_popup" id="setting_popup">
+    <div class="center_box awards_popup" id="awards_popup">
         <div class="box-bg">
             <div class="box-sticky">
                 <div class="text-button">
