--- a/box.html
+++ b/box.html
@@ -129,6 +129,32 @@
             margin: 10px;
             /* Margin between boxes */
         }
+
+        .cardbox {
+            width: 200px;
+            /* Width of the box */
+            height: 200px;
+            /* Height of the box */
+            background-color: #eb6200;
+            /* Background color of the box */
+            color: #fff;
+            /* Text color */
+            text-align: center;
+            /* Center-align text inside the box */
+            line-height: 200px;
+            /* Center vertically */
+            font-size: 20px;
+            /* Font size of the text */
+            margin: 10px;
+            /* Margin between boxes */
+        }
+
+        .main {
+            display: flex;
+        }
+        .main_cardbox{
+            display: flex;
+        }
     </style>
 </head>
 
@@ -136,6 +162,19 @@
     <div id="container">
         <div class="box"> <!-- Creating a div with class "box" -->
             Click me to create 10 boxes!
+        </div>
+        <div class="main_cardbox">
+            <div class="cardbox"></div>
+            <div class="cardbox"></div>
+            <div class="cardbox"></div>
+            <div class="cardbox"></div>
+            <div class="cardbox"></div>
+            <div class="cardbox"></div>
+            <div class="cardbox"></div>
+            <div class="cardbox"></div>
+            <div class="cardbox"></div>
+            <div class="cardbox"></div>
+            <div class="cardbox"></div>
         </div>
 
         <!-- <div class="box2"> 
@@ -166,14 +205,20 @@
         document.addEventListener("DOMContentLoaded", function () {
             const container = document.getElementById("container");
             const box = document.querySelector(".box");
+            // const neBox = document.createElement("div");
 
             // const box2 = document.querySelector(".box2");
             // const box3 = document.querySelector(".box3");
             // const box4 = document.querySelector(".box4");
             // const box5 = document.querySelector(".box5");
-            
+
             box.addEventListener("click", function () {
                 ShowCard();
+                
+                // neBox.classList.add("main");
+                // neBox.textContent = "Box";
+                // container.appendChild(neBox);
+
                 for (let i = start - 10; i < end - 10; i++) {
                     const newBox = document.createElement("div");
                     newBox.classList.add("boxItem");
