--- a/box.html
+++ b/box.html
@@ -65,44 +65,6 @@
             /* Change cursor to pointer on hover */
         }
 
-        .box4 {
-            width: 200px;
-            /* Width of the box */
-            height: 200px;
-            /* Height of the box */
-            background-color: #3498db;
-            /* Background color of the box */
-            color: #fff;
-            /* Text color */
-            text-align: center;
-            /* Center-align text inside the box */
-            line-height: 200px;
-            /* Center vertically */
-            font-size: 20px;
-            /* Font size of the text */
-            cursor: pointer;
-            /* Change cursor to pointer on hover */
-        }
-
-        .box5 {
-            width: 200px;
-            /* Width of the box */
-            height: 200px;
-            /* Height of the box */
-            background-color: #3498db;
-            /* Background color of the box */
-            color: #fff;
-            /* Text color */
-            text-align: center;
-            /* Center-align text inside the box */
-            line-height: 200px;
-            /* Center vertically */
-            font-size: 20px;
-            /* Font size of the text */
-            cursor: pointer;
-            /* Change cursor to pointer on hover */
-        }
-
 
         .boxContainer {
             display: flex;
@@ -152,9 +114,24 @@
         .main {
             display: flex;
         }
-        .main_cardbox{
-            display: flex;
+
+        .main_cardbox {
+            display: none;
         }
+
+         @keyframes fadeIn {
+            from {
+                opacity: 0;
+            }
+
+            to {
+                opacity: 1;
+            }
+        }
+
+        .boxItem {
+            animation: fadeIn 0.7s ease-in;
+        } 
     </style>
 </head>
 
@@ -164,6 +141,7 @@
             Click me to create 10 boxes!
         </div>
         <div class="main_cardbox">
+            <!-- <div class="cardbox"></div>
             <div class="cardbox"></div>
             <div class="cardbox"></div>
             <div class="cardbox"></div>
@@ -173,8 +151,7 @@
             <div class="cardbox"></div>
             <div class="cardbox"></div>
             <div class="cardbox"></div>
-            <div class="cardbox"></div>
-            <div class="cardbox"></div>
+            <div class="cardbox"></div> -->
         </div>
 
         <!-- <div class="box2"> 
@@ -186,7 +163,7 @@
         <div class="box4"> 
             Click me to create 10 boxes!
         </div>
-        <div class="box5"> 
+        <div class="box5">
             Click me to create 10 boxes!
         </div> -->
     </div>
@@ -205,6 +182,7 @@
         document.addEventListener("DOMContentLoaded", function () {
             const container = document.getElementById("container");
             const box = document.querySelector(".box");
+            const main_cardbox = document.querySelector(".main_cardbox");
             // const neBox = document.createElement("div");
 
             // const box2 = document.querySelector(".box2");
@@ -214,18 +192,19 @@
 
             box.addEventListener("click", function () {
                 ShowCard();
-                
+                // main_cardbox.style.display = "flex";
                 // neBox.classList.add("main");
                 // neBox.textContent = "Box";
                 // container.appendChild(neBox);
-
+                setTimeout(() => { main_cardbox.style.display = "flex"; }, 700);
                 for (let i = start - 10; i < end - 10; i++) {
                     const newBox = document.createElement("div");
                     newBox.classList.add("boxItem");
                     newBox.textContent = "Box " + (i + 1);
-                    container.appendChild(newBox);
+                    main_cardbox.appendChild(newBox);
                 }
             });
+
             // box2.addEventListener("click", function () {
             //     ShowCard();
             //     for (let i = start - 10; i < end - 10; i++) {
