--- a/home.html
+++ b/home.html
@@ -340,6 +340,12 @@
                 </div>
             </div>
             <!--? End: Section_Three  -->
+
+            <div class="timer">
+				<label>Time</label>
+				<label id="minutes">00</label>:<label id="seconds">00</label>
+			</div>
+
         </div>
         <!--? End: Section_Two  -->
         <!-- ------------------Welcome------------------------------ -->
@@ -443,6 +449,7 @@
     <!-- Start: Js links-->
     <!-- <script src="./js/solitaire.js"></script> -->
     <script src="./solitaire.js"></script>
+    <script src="timeCounter.js"></script>
     <!-- End: Js links-->
 </body>
 
