--- a/box1.html
+++ b/box1.html
@@ -140,6 +140,7 @@
             /* Font size of the text */
             margin: 10px;
             /* Margin between boxes */
+            
         }
 
         .cardbox {
@@ -188,6 +189,19 @@
             line-height: 200px;
             font-size: 20px;
             margin: 10px;
+            position: relative;
+        }
+        .boxItem2 {
+            position: absolute;
+            left: 130px;
+            width: 200px;
+            height: 200px;
+            background-color: #ff000080;
+            color: #fff;
+            text-align: center;
+            line-height: 200px;
+            font-size: 20px;
+            margin: 10px;
         }
     </style>
 </head>
@@ -195,16 +209,7 @@
 <body>
     <div class="ten_box">
         <div class="boxItem1">1</div>
-        <div class="boxItem1">2</div>
-        <div class="boxItem1">3</div>
-        <div class="boxItem1">4</div>
-        <div class="boxItem1">5</div>
-        <div class="boxItem1">6</div>
-        <div class="boxItem1">7</div>
-        <div class="boxItem1">8</div>
-        <div class="boxItem1">9</div>
-        <div class="boxItem1">10</div>
-
+        <div class="boxItem2">2</div>
     </div>
     <div id="container" class="boxall">
         <div class="box"> <!-- Creating a div with class "box" -->
@@ -240,11 +245,6 @@
             box.addEventListener("click", function () {
                 main_cardbox.style.display = "flex";
                 ShowCard();
-                // for (let i = start; i < end; i++) {
-                //     console.log("index....", i)
-                // }
-                // start = end;
-                // end += 10;
                 box.style.display = "none";
             });
             box.style.margin = "0 0 10px 0";
@@ -252,11 +252,6 @@
             box2.addEventListener("click", function () {
                 main_cardbox.style.display = "flex";
                 ShowCard();
-                // for (let i = start; i < end; i++) {
-                //     console.log("index....", i)
-                // }
-                // start = end;
-                // end += 10;
                 box2.style.display = "none";
             });
             box2.style.margin = "0 0 10px 0";
@@ -264,11 +259,6 @@
             box3.addEventListener("click", function () {
                 main_cardbox.style.display = "flex";
                 ShowCard();
-                // for (let i = start; i < end; i++) {
-                //     console.log("index....", i)
-                // }
-                // start = end;
-                // end += 10;
                 box3.style.display = "none";
             });
             box3.style.margin = "0 0 10px 0";
@@ -276,67 +266,20 @@
             box4.addEventListener("click", function () {
                 main_cardbox.style.display = "flex";
                 ShowCard();
-                // for (let i = start; i < end; i++) {
-                //     console.log("index....", i)
-                // }
-                // start = end;
-                // end += 10;
                 box4.style.display = "none";
             });
             box4.style.margin = "0 0 10px 0";
 
             box5.addEventListener("click", function () {
-                // ShowCard();
                 main_cardbox.style.display = "flex";
                 ShowCard();
-                // for (let i = start; i < end; i++) {
-                //     // console.log("index....", i)
-                // }
-
-                // start = end;
-                // end += 10;
                 box5.style.display = "none";
             });
             box5.style.margin = "0 0 10px 0";
 
-            // box5.addEventListener("click", function () {
-            //     // Disable further clicks on box5
-            //     box5.removeEventListener("click", this);
-
-            //     // ShowCard();
-            //     main_cardbox.style.display = "flex";
-            //     ShowCard();
-            //     for (let i = start; i < end; i++) {
-            //         // console.log("index....", i)
-            //     }
-
-            //     start = end;
-            //     end += 10;
-            //     box5.style.display = "none";
-            // });
-
-            // function ShowCard() {
-            //     let i = start;
-            //     const end = 10; // Assuming end is 10
-            //     const interval = setInterval(() => {
-            //         if (i < end) {
-            //             console.log("index....", i);
-            //             const newBox = document.createElement("div");
-            //             newBox.classList.add("boxItem");
-            //             newBox.textContent = "Box " + (i + 1);
-            //             // Insert new boxes before the main_cardbox instead of appending them
-            //             main_cardbox.parentNode.insertBefore(newBox, main_cardbox);
-            //             i++;
-            //         } else {
-            //             clearInterval(interval); // Stop the interval when loop completes
-            //         }
-            //     }, 500); // Repeat every 0.5 seconds
-            // }   
-
-
             function ShowCard() {
                 let i = start;
-                const end = 10; // Assuming end is 10
+                const end = 1; // Assuming end is 10
                 const interval = setInterval(() => {
                     if (i < end) {
                         console.log("index....", i);
